@@ -37,7 +37,7 @@ module ActiveMerchant
       end
 
       def capture(money, identification, options = {})
-        authorization, operation_number, _network_transaction_id = identification.split('#')
+        authorization, operation_number, _money = identification.split('#')
 
         post = {}
         options[:operation_number] = operation_number
@@ -51,13 +51,13 @@ module ActiveMerchant
       end
 
       def void(identification, options = {})
-        authorization, operation_number, money, _network_transaction_id = identification.split('#')
+        authorization, operation_number, money = identification.split('#')
         options[:operation_number] = operation_number
         handle_cancellation(:void, money.to_i, authorization, options)
       end
 
       def refund(money, identification, options = {})
-        authorization, operation_number, _money, _network_transaction_id = identification.split('#')
+        authorization, operation_number, _money = identification.split('#')
         options[:operation_number] = operation_number
         handle_cancellation(:refund, money, authorization, options)
       end
@@ -67,19 +67,46 @@ module ActiveMerchant
 
         before_message = transcript.gsub(%r(\\\")i, "'").scan(/{[^>]*}/).first.gsub("'", '"')
         request_data = JSON.parse(before_message)
-        params =  decode_params(request_data['parametros']).
+        params = parse(request_data['parametros'])
+
+        if @options[:encryption_key]
+          sensitive_fields = decrypt_sensitive_fields(params['encryptedData']).
+                            gsub(%r(("pan\\?"\s*:\s*\\?")[^"]*)i, '\1[FILTERED]').
+                            gsub(%r(("caducidad\\?"\s*:\s*\\?")[^"]*)i, '\1[FILTERED]').
+                            gsub(%r(("cvv2\\?"\s*:\s*\\?")[^"]*)i, '\1[FILTERED]').
+                            gsub(%r(("csc\\?"\s*:\s*\\?")[^"]*)i, '\1[FILTERED]').
+                            gsub(%r(("authentication_value\\?"\s*:\s*\\?")[^"]*)i, '\1[FILTERED]')
+          params['encryptedData'] = encrypt_sensitive_fields(sensitive_fields)
+        else
+          params =  decode_params(request_data['parametros']).
                   gsub(%r(("pan\\?"\s*:\s*\\?")[^"]*)i, '\1[FILTERED]').
                   gsub(%r(("caducidad\\?"\s*:\s*\\?")[^"]*)i, '\1[FILTERED]').
                   gsub(%r(("cvv2\\?"\s*:\s*\\?")[^"]*)i, '\1[FILTERED]').
                   gsub(%r(("csc\\?"\s*:\s*\\?")[^"]*)i, '\1[FILTERED]')
-        request_data['parametros'] = encode_params(params)
+        end
 
+        request_data['parametros'] = encode_params(params)
         before_message = before_message.gsub(%r(\")i, '\\\"')
         after_message = request_data.to_json.gsub(%r(\")i, '\\\"')
         transcript.sub(before_message, after_message)
       end
 
       private
+
+      def decrypt_sensitive_fields(data)
+        cipher = OpenSSL::Cipher.new('AES-256-CBC').decrypt
+        cipher.key = [@options[:encryption_key]].pack('H*')
+        cipher.iv = @options[:initiator_vector]&.split('')&.map(&:to_i)&.pack('c*')
+        cipher.update([data].pack('H*')) + cipher.final
+      end
+
+      def encrypt_sensitive_fields(data)
+        cipher = OpenSSL::Cipher.new('AES-256-CBC').encrypt
+        cipher.key = [@options[:encryption_key]].pack('H*')
+        cipher.iv = @options[:initiator_vector]&.split('')&.map(&:to_i)&.pack('c*')
+        encrypted = cipher.update(data.to_json) + cipher.final
+        encrypted.unpack1('H*')
+      end
 
       def handle_purchase(action, money, creditcard, options)
         post = { parametros: { accion: CECA_ACTIONS_DICTIONARY[action] } }
@@ -109,6 +136,7 @@ module ActiveMerchant
 
       def add_encryption(post)
         post[:cifrado] = CECA_ENCRIPTION
+        post[:parametros][:encryptedData] = encrypt_sensitive_fields(post[:parametros][:encryptedData]) if @options[:encryption_key]
       end
 
       def add_signature(post, params_encoded, options)
@@ -133,10 +161,14 @@ module ActiveMerchant
       def add_creditcard(post, creditcard)
         params = post[:parametros] ||= {}
 
-        params[:pan] = creditcard.number
-        params[:caducidad] = strftime_yyyymm(creditcard)
-        params[:cvv2] = creditcard.verification_value
-        params[:csc] = creditcard.verification_value if CreditCard.brand?(creditcard.number) == 'american_express'
+        payment_method = {
+          pan: creditcard.number,
+          caducidad: strftime_yyyymm(creditcard),
+          cvv2: creditcard.verification_value
+        }
+        payment_method[:csc] = creditcard.verification_value if CreditCard.brand?(creditcard.number) == 'american_express'
+
+        @options[:encryption_key] ? params[:encryptedData] = payment_method : params.merge!(payment_method)
       end
 
       def add_stored_credentials(post, creditcard, options)
@@ -163,14 +195,13 @@ module ActiveMerchant
 
       def add_three_d_secure(post, options)
         params = post[:parametros] ||= {}
-        return unless three_d_secure = options[:three_d_secure]
+        return params[:ThreeDsResponse] = '{}' unless three_d_secure = options[:three_d_secure]
 
         params[:exencionSCA] ||= CECA_SCA_TYPES.fetch(options[:exemption_type]&.to_sym, :NONE)
 
         three_d_response = {
           exemption_type: options[:exemption_type],
           three_ds_version: three_d_secure[:version],
-          authentication_value: three_d_secure[:cavv],
           directory_server_transaction_id: three_d_secure[:ds_transaction_id],
           acs_transaction_id: three_d_secure[:acs_transaction_id],
           authentication_response_status: three_d_secure[:authentication_response_status],
@@ -179,15 +210,20 @@ module ActiveMerchant
           enrolled: three_d_secure[:enrolled]
         }
 
-        three_d_response.merge!({ amount: post[:parametros][:importe] })
+        if @options[:encryption_key]
+          params[:encryptedData].merge!({ authentication_value: three_d_secure[:cavv] })
+        else
+          three_d_response[:authentication_value] = three_d_secure[:cavv]
+        end
 
+        three_d_response[:amount] = post[:parametros][:importe]
         params[:ThreeDsResponse] = three_d_response.to_json
       end
 
       def commit(action, post)
         auth_options = {
-          operation_number: post[:parametros][:numOperacion],
-          amount: post[:parametros][:importe]
+          operation_number: post.dig(:parametros, :numOperacion),
+          amount: post.dig(:parametros, :importe)
         }
 
         add_encryption(post)
@@ -195,6 +231,7 @@ module ActiveMerchant
 
         params_encoded = encode_post_parameters(post)
         add_signature(post, params_encoded, options)
+
         response = parse(ssl_post(url(action), post.to_json, headers))
         response[:parametros] = parse(response[:parametros]) if response[:parametros]
 
@@ -231,11 +268,11 @@ module ActiveMerchant
       end
 
       def encode_post_parameters(post)
-        post[:parametros] = encode_params(post[:parametros].to_json)
+        post[:parametros] = encode_params(post[:parametros])
       end
 
       def encode_params(params)
-        Base64.strict_encode64(params)
+        Base64.strict_encode64(params.to_json)
       end
 
       def decode_params(params)
