@@ -96,6 +96,7 @@
 * HiPay: Scrub/Refund/Void [gasb150] #4995
 * Rapyd: Adding fixed_side and requested_currency options [Heavyblade] #4962
 * Add new card type Tuya. GlobalCollect & Decidir: Improve support for Tuya card type [sinourain] #4993
+* Cecabank: Encrypt credit card fields [sinourain] #4998
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
